<resources>
    <string name="app_name">VerdeVersity</string>

    /events booking string
    <string name="book_button" translatable="false"> Book Now </string>
    <string name="event_info" translatable="false"> Saturday, October 18, 2025\n9:00 AM - 12:00 PM\nBaguio City </string>
    <string name="event_des" translatable="false"> This hands-on workshop provides practical skills to significantly reduce food waste at home. Participants will learn the fundamentals of home composting methods suitable for small spaces and basic food preservation techniques like pickling and drying to extend the life of their produce. </string>
    <string name="event_price" translatable="false"> PHP 85.00 </string>


    /home strings
    <string name="events_button" translatable="false"> Events </string>
    <string name="timeline_button" translatable="false"> Timeline </string>
    <string name="zwb_username" translatable="false"> Zero Waste Baguio, Inc. </string>
    <string name="comment1" translatable="false">See you again next month! </string>
    <string name="post1" translatable="false"> Feeling so inspired and productive after the DIY Eco-Cleaners Workshop this morning! ✨ It was amazing to learn how to make powerful, non-toxic cleaners using simple things like vinegar, baking soda, and leftover citrus peels from our kitchen here in Baguio.</string>

    /Comms strings
    <string name="comms" translatable="false"> Chat </string>

    /log in strings
    <string name="login_button_text" translatable="false"> Register </string>
    <string name="password_hint" translatable="false"> ******* </string>
    <string name="email_hint" translatable="false"> example@email.com </string>
    <string name="email_label" translatable="false"> Email </string>
    <string name="password_label" translatable="false"> Password </string>
    <string name="logo_description" translatable="false"> Logo Image </string>

    /item event card strings
    <string name="enroll_button" translatable="false"> Enroll </string>
    <string name="event_date" translatable="false"> Saturday, October 18, 2025 </string>
    <string name="event_location" translatable="false"> Baguio City </string>
    <string name="event_time" translatable="false"> 9:00 AM - 12:00 PM </string>
    <string name="event_title" translatable="false"> Zero-Waste Kitchen: Composting and Food Preservation Basics </string>
    <string name="view_more" translatable="false"> View more </string>

    /image description
    <string name="filter_button" translatable="false"> Filter </string>
    <string name="user_profile" translatable="false"> User Profile </string>
    <string name="add_fav" translatable="false"> Add to favorites </string>
    <string name="comment_button" translatable="false"> Comment on Post </string>
    <string name="share_button" translatable="false"> Share post </string>
    <string name="bg_image" translatable="false"> Background Image </string>

    //profile strings
    <string name="cert_message" translatable="false"> how to effectively track and communicate environmental and social initiatives</string>
    <string name="cert_title" translatable="false"> Best Practices in Sustainability Reporting </string>
    <string name="view_cert" translatable="false">View Certificate</string>
    <string name="course_des" translatable="false">Exploring the fundamental principles of a circular economic model</string>
    <string name="cert_list" translatable="false">Certificates</string>
    <string name="course_list" translatable="false">Courses Offered</string>
    <string name="user_info" translatable="false">University of X\nComputer Science</string>
    <string name="user_name" translatable="false">Cassandra Joe</string>


</resources>